package edu.pies.sysaguaapp.models;

import lombok.*;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class Entregador {
    private String nome;
    private String telefone;
}
