package edu.pies.sysaguaapp.models;

public class Transacao {
}
